--- a/Content Based First.ipynb
+++ b/Content Based First.ipynb
@@ -503,8 +503,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "60c21bc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>['Animation', 'Comedy', 'Family']</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>['Adventure', 'Fantasy', 'Family']</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>8844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>['Romance', 'Comedy']</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>15602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>['Comedy', 'Drama', 'Romance']</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>31357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>['Comedy']</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>11862</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         title                              genres  \\\n",
+       "0                    Toy Story   ['Animation', 'Comedy', 'Family']   \n",
+       "1                      Jumanji  ['Adventure', 'Fantasy', 'Family']   \n",
+       "2             Grumpier Old Men               ['Romance', 'Comedy']   \n",
+       "3            Waiting to Exhale      ['Comedy', 'Drama', 'Romance']   \n",
+       "4  Father of the Bride Part II                          ['Comedy']   \n",
+       "\n",
+       "   release_date  runtime  vote_average  vote_count  \\\n",
+       "0          1995     81.0           7.7      5415.0   \n",
+       "1          1995    104.0           6.9      2413.0   \n",
+       "2          1995    101.0           6.5        92.0   \n",
+       "3          1995    127.0           6.1        34.0   \n",
+       "4          1995    106.0           5.7       173.0   \n",
+       "\n",
+       "                                            overview     id  \n",
+       "0  Led by Woody, Andy's toys live happily in his ...    862  \n",
+       "1  When siblings Judy and Peter discover an encha...   8844  \n",
+       "2  A family wedding reignites the ancient feud be...  15602  \n",
+       "3  Cheated on, mistreated and stepped on, the wom...  31357  \n",
+       "4  Just when George Banks has recovered from his ...  11862  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "22d0a9e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../datasets/metadata_clean.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "975219dd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -526,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
